# ci-test

./: .travis.yml  CMakeLists.txt  Changelog.txt  LICENSE  Makefile  README.md  appveyor.yml
.github/workflows/: blank.yml  ci-test.yml  test1.yml  test2.yml  winlibs-test.yml
include/: mylibrary.h
src/: myapplication.c  mylibrary.c
